format: reformat by spotlessApply task